Fix: <main> jumping when opening modal view

--- a/site/styles.css
+++ b/site/styles.css
@@ -54,6 +54,7 @@ li{
 .content-open {
   position: fixed;
   overflow: hidden;
+  width: 100%;
 }
 
 #backdrop {
